--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,18 @@
-version: '3.9'
+version: "3.9"
 
 services:
-  web:
-    build: ./app
-    container_name: flask_app
-    ports:
-      - "5001:5000" #alterar depois
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-    depends_on:
-      - db
-    volumes:
-      - ./app:/app
-
   db:
-    image: postgres:16
-    container_name: postgres_db
+    image: postgres:15
+    container_name: postgres
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: antipatterns
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
-
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
-    ports:
-      - "8080:80"
-    depends_on:
-      - db
-    volumes:
-      - pgadmindata:/var/lib/pgadmin
+      - postgres_data:/var/lib/postgresql/data
+    restart: always
 
 volumes:
-  pgdata:
-  pgadmindata:
+  postgres_data:
